manifests/excalidraw/web-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: draw
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 80
      name: tcpport5000
  selector:
    app: draw
